# serde_infer

./: Cargo.toml  readme.md
src/: lib.rs
tests/: main.rs
