[package]
name = "serde_infer"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/tascord/serde_infer"
authors = ["flora"]
description = "Don't you hate #[serde(rename)]-ing every field in your struct"

[lib]
proc-macro = true

[dependencies]
heck = "0.5.0"
quote = "1.0.37"
serde = { version = "1.0.215", features = ["derive"] }
syn = { version = "2.0.87", features = ["full"] }

[dev-dependencies]
serde_json = "1"
